@@ -1,14 +1,14 @@
 dnl $Id$
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl   Copyright 2015-2025 Karl Berry <tex-live@tug.org>
+dnl   Copyright 2015-2026 Karl Berry <tex-live@tug.org>
 dnl   Copyright 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
 dnl   gives unlimited permission to copy and/or distribute it,
 dnl   with or without modifications, as long as this notice is preserved.
 dnl
-AC_INIT([extended BibTeX (TeX Live)], [4.02], [tex-k@tug.org])
+AC_INIT([extended BibTeX (TeX Live)], [4.03], [tex-k@tug.org])
 AC_PREREQ([2.65])
 AC_CONFIG_SRCDIR([bibtex-1.c])
 AC_CONFIG_AUX_DIR([../../build-aux])
