@@ -54,6 +54,7 @@
 \item 一二三四漆捌玖拾: 1 1 hz:1 kn:0 hg:0 bp:0 misc:0
 \item 𰀀𰀁𰀂𰀃𰀄𰀅𰀆𰀇: 1 1 hz:1 kn:0 hg:0 bp:0 misc:0
 \item 𪜀𪜁𪜂𪜃𪜄𪜅𪜆𪜇: 1 1 hz:1 kn:0 hg:0 bp:0 misc:0
+\item 𲎰𲎱𲎲𲎳𲎴𲎵𲎶𲎷: 1 1 hz:1 kn:0 hg:0 bp:0 misc:0
 \item 𮯰𮯱𮯲𮯳𮯴𮯵𮯶𮯷: 1 1 hz:1 kn:0 hg:0 bp:0 misc:0
 \item 𱍐𱍑𱍒𱍓𱍔𱍕𱍖𱍗: 1 1 hz:1 kn:0 hg:0 bp:0 misc:0
 \item 㐂㒵㓛㞍㟢㐆㐬㐮㔫㚑㐧: 1 1 hz:1 kn:0 hg:0 bp:0 misc:0
